# ChangeLog for app-text/enscript
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-text/enscript/ChangeLog,v 1.58 2010/01/26 05:08:23 jer Exp $

*enscript-1.6.5 (26 Jan 2010)

  26 Jan 2010; Jeroen Roovers <jer@gentoo.org> +enscript-1.6.5.ebuild:
  Version bump.

  29 Jul 2009; Jeremy Olexa <darkside@gentoo.org> -enscript-1.6.4-r2.ebuild,
  -enscript-1.6.4-r3.ebuild:
  Remove vulnerable version(s), bug 271757

  15 Nov 2008; Tobias Scherbaum <dertobi123@gentoo.org>
  enscript-1.6.4-r4.ebuild:
  ppc stable, bug #243228

  12 Nov 2008; Markus Rothe <corsair@gentoo.org> enscript-1.6.4-r4.ebuild:
  Stable on ppc64; bug #243228

  08 Nov 2008; Jeroen Roovers <jer@gentoo.org> enscript-1.6.4-r4.ebuild:
  Stable for HPPA (bug #243228).

  08 Nov 2008; Raúl Porcel <armin76@gentoo.org> enscript-1.6.4-r4.ebuild:
  alpha/ia64 stable wrt #243228

  08 Nov 2008; Markus Meier <maekke@gentoo.org> enscript-1.6.4-r4.ebuild:
  amd64/x86 stable, bug #243228

  07 Nov 2008; Ferris McCormick <fmccor@gentoo.org>
  enscript-1.6.4-r4.ebuild:
  Sparc stable --- Security Bug #243228 --- verified with -E on a ruby script.

*enscript-1.6.4-r4 (07 Nov 2008)

  07 Nov 2008; Timo Gurr <tgurr@gentoo.org>
  +files/enscript-1.6.4-CVE-2008-3863-CVE-2008-4306.patch,
  +files/enscript-1.6.4-config.patch, +enscript-1.6.4-r4.ebuild:
  Revision bump fixing security issues, see bug #243228. Also fixes bug
  #202348 and includes some more QA fixes.

  04 Mar 2008; Jeroen Roovers <jer@gentoo.org> enscript-1.6.4-r2.ebuild,
  enscript-1.6.4-r3.ebuild:
  Stable for HPPA (needed by kde-base/kdeprint). Fixed quoting issues.

*enscript-1.6.4-r3 (12 Apr 2007)

  12 Apr 2007; <twp@gentoo.org> +files/enscript-1.6.2-ruby.patch,
  +files/ruby.st, +enscript-1.6.4-r3.ebuild:
  Add ruby support. Bug # 158337.

  28 Jan 2007; Marius Mauch <genone@gentoo.org> enscript-1.6.4-r2.ebuild:
  Replacing einfo with elog
