@@ -9,8 +9,10 @@ AUX enscript-1.6.4-fsf-gcc-darwin.patch 669 RMD160 c12886f3d11ae5c54b0a45bf5b334
 AUX enscript-catmur.patch 604 RMD160 74dae25828a36028f877d7cec73f321f5354e4ad SHA1 572c173c8e93bb9c7eb0bae9acd750e7d86fc6f8 SHA256 23b2359b2ef4e9cf0f6b915fb9f326a0a9ebd3f43f4dcca5f4beb2602201d02c
 AUX ruby.st 3904 RMD160 a1e7228e4b508e73210d5054e4b66f8e6be4135f SHA1 8a8311ee734f1d3bc8baafb67f7cf7425e4469c9 SHA256 211d8a241d177c9c1c232eec514357b96b2d28554d63b72df3d72f79a41b25b0
 DIST enscript-1.6.4.tar.gz 1036734 RMD160 9050728f14500f0360c5a4e258cba0646694bfeb SHA1 9dd7128a508d4c9671659b9520028d12add50cfa SHA256 45299a4db47c9c08c3649d4f62b211ae79ef5143360c264a40371a728f6ad99b
+DIST enscript-1.6.5.1.tar.gz 1314983 RMD160 7dfddcf15d28ac400a8db3d9e6461a1c08775654 SHA1 e17ae80b780d01fdc2e66bfb0e92859207bac276 SHA256 57bf356c1c44bcb02865c6f7337a18d0b51042388d5f10e6bbbcdd15e368f58b
 DIST enscript-1.6.5.tar.gz 1308918 RMD160 5c933f69161cb947176dce87f9f86d09da680b96 SHA1 2bb50c3b5bf2e68c0985c7a0c559c48adc881b75 SHA256 224ee94eb1c3c527d550a5bd7ef7a229cb2be76bf6dbad98e91093f1cfb304eb
 EBUILD enscript-1.6.4-r4.ebuild 1632 RMD160 03132b76aad205fbf8fba6b28b4ea1c8648bff29 SHA1 ea0d30cf68346b594862d8b18cece197a665f534 SHA256 5136ee613fec30246df99750fe246fecc51ba45b8d7a9d420f50a4966988c762
+EBUILD enscript-1.6.5.1.ebuild 1347 RMD160 10db5fc11da46951e6b253c8b567ee85b32be8be SHA1 146449af6e2be5cac0293532d658cde7827ca419 SHA256 feb70e9f3a06d38cab4d25d6e52afc2ad792ca34c8e296a88219a03ab706eed2
 EBUILD enscript-1.6.5.ebuild 1345 RMD160 7d4ee028e12ee7c2e10b7206f28f333fafdb5159 SHA1 21f31a557eb6f509cf6833400e83b56f01704fee SHA256 afcc538db5c915bec1d0fe5013a5b1ffdf739d7162963bded37f1d2e189e906e
-MISC ChangeLog 7370 RMD160 928005cbf65e93848dcb289783d581260cf849dc SHA1 02b75701b2a83295cc20e7bbdd8d4efcab444cb4 SHA256 57f95571f4e42e449e0f828530f4f924d086ed33e779ac36a2d81faae925c709
+MISC ChangeLog 7493 RMD160 5f1d0bf977560a8a80ddfeb00f4da97792746161 SHA1 3300d227ac27e0026dc4dbcba818e5095f482d9e SHA256 34ae43259b0cbcfc12e9d6ab81b2f11692ceec2eb7215978f3d9ea6aa9f6e188
 MISC metadata.xml 161 RMD160 1e5b1e42553c8869b93c4a5448e9a2a2ed9fe525 SHA1 209c6a46e4cdd891980115e42ba419e3799f8088 SHA256 7c85e6739a71f5bb23e8de36c88677d772946e61f7285892f7554e37bd2bca76
