@@ -1,6 +1,11 @@
 # ChangeLog for app-text/enscript
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-text/enscript/ChangeLog,v 1.58 2010/01/26 05:08:23 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-text/enscript/ChangeLog,v 1.59 2010/03/09 18:09:11 jer Exp $
+
+*enscript-1.6.5.1 (09 Mar 2010)
+
+  09 Mar 2010; Jeroen Roovers <jer@gentoo.org> +enscript-1.6.5.1.ebuild:
+  Version bump.
 
 *enscript-1.6.5 (26 Jan 2010)
 
